--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongo-queue",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Use mongo as a persistent queue",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,8 @@
     "cron-master": "~0.3.0",
     "mongodb": "~2.1.21",
     "node-uuid": "~1.4.7",
-    "xtend": "~4.0.1"
+    "ramda": "^0.23.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "chai": "~3.5.0",
@@ -21,6 +22,9 @@
     "sinon": "~1.17.2",
     "sinon-as-promised": "~4.0.2",
     "standard": "^8.6.0"
+  },
+  "engines": {
+    "node": ">=4"
   },
   "repository": {
     "type": "git",
