--- a/package.json
+++ b/package.json
@@ -4,24 +4,32 @@
   "description": "Use mongo as a persistent queue",
   "main": "index.js",
   "scripts": {
-    "lint": "standard --fix",
-    "test": "npm run lint && env QUEUE_TEST_URL=mongodb://localhost:27017/QUEUE_LOCAL BLUEBIRD_DEBUG=true mocha -A $(find . -name \"*.test.js\" -not -path \"./node_modules/*\")"
+    "test": "env BLUEBIRD_LONG_STACK_TRACES=1 BLUEBIRD_WARNINGS=1 QUEUE_TEST_URL=mongodb://localhost:27017/QUEUE_LOCAL mocha lib/*.test.js lib/**/*.test.js -t 5000",
+    "cover": "nyc --reporter=lcov --produce-source-map=true npm run test",
+    "pretty": "prettier-eslint --write --prettier.single-quote --prettier.print-width=100 'lib/**/*.js'",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "bluebird": "~3.4.6",
     "cron-master": "~0.3.0",
     "mongodb": "~2.1.21",
-    "node-uuid": "~1.4.7",
-    "ramda": "^0.23.0",
-    "xtend": "^4.0.1"
+    "ramda": "^0.23.0"
   },
   "devDependencies": {
-    "chai": "~3.5.0",
+    "eslint": "~3.18.0",
+    "expect": "~1.20.2",
+    "husky": "~0.13.3",
+    "lint-staged": "~3.4.1",
     "mocha": "^3.2.0",
+    "nodemon": "~1.11.0",
+    "nyc": "~10.1.2",
+    "prettier": "~1.2.2",
+    "prettier-eslint-cli": "~3.4.2",
     "proxyquire": "0.5.3",
     "sinon": "~1.17.2",
     "sinon-as-promised": "~4.0.2",
-    "standard": "^8.6.0"
+    "supertest": "~0.9.2",
+    "chai": "~3.5.0"
   },
   "engines": {
     "node": ">=4"
@@ -41,6 +49,12 @@
       "it",
       "describe",
       "beforeEach"
+    ]
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier-eslint --write --prettier.single-quote --prettier.print-width=100",
+      "git add"
     ]
   }
 }
